// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aws-counter.test.w 1`] = `
{
  "duration": "<DURATION>",
  "results": {
    "counter/aws-counter.test.w": {
      "validates the AWS counter name": {
        "args": {
          "methods": {
            "Counter": [
              "dynamoTableArn",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:validates the AWS counter name",
        "traces": [
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:validates the AWS counter name/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`dec.test.w 1`] = `
{
  "duration": "<DURATION>",
  "results": {
    "counter/dec.test.w": {
      "dec": {
        "args": {
          "methods": {
            "Counter": [
              "dec",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:dec",
        "traces": [
          {
            "data": {
              "message": "Peek (value=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Dec (amount=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=0).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Dec (amount=2).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=-2).",
              "result": "-2",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:dec/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
      "key dec": {
        "args": {
          "methods": {
            "Counter": [
              "dec",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env1/test:key dec",
        "traces": [
          {
            "data": {
              "message": "Peek (value=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Dec (amount=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=0, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Dec (amount=2, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=-2, key: my-key).",
              "result": "-2",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env1/test:key dec/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`inc.test.w 1`] = `
{
  "duration": "<DURATION>",
  "results": {
    "counter/inc.test.w": {
      "inc": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:inc",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=2).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=10).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=12).",
              "result": "12",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1).",
              "result": "12",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:inc/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
      "key inc": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env1/test:key inc",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=2, key: my-key).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=10, key: my-key).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=12, key: my-key).",
              "result": "12",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1, key: my-key).",
              "result": "12",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env1/test:key inc/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`initial.test.w 1`] = `
{
  "duration": "<DURATION>",
  "results": {
    "counter/initial.test.w": {
      "initial:default": {
        "args": {
          "methods": {
            "Counter": [
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:initial:default",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/counterA",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:initial:default/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
      "initial:negative-value": {
        "args": {
          "methods": {
            "Counter": [
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env2/test:initial:negative-value",
        "traces": [
          {
            "data": {
              "message": "Peek (value=-198).",
              "result": "-198",
              "status": "success",
            },
            "sourcePath": "root/env2/counterC",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env2/test:initial:negative-value/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
      "initial:positive-value": {
        "args": {
          "methods": {
            "Counter": [
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env1/test:initial:positive-value",
        "traces": [
          {
            "data": {
              "message": "Peek (value=500).",
              "result": "500",
              "status": "success",
            },
            "sourcePath": "root/env1/counterB",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env1/test:initial:positive-value/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`peek.test.w 1`] = `
{
  "duration": "<DURATION>",
  "results": {
    "counter/peek.test.w": {
      "key peek": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env1/test:key peek",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=0, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env1/test:key peek/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
      "peek": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:peek",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=0).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:peek/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`set.test.w 1`] = `
{
  "duration": "<DURATION>",
  "results": {
    "counter/set.test.w": {
      "key set": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
              "set",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env1/test:key set",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1, key: my-key).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1, key: my-key).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=2, key: my-key).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=10, key: my-key).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=12, key: my-key).",
              "result": "12",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Set (value=88, key: my-key).",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=88, key: my-key).",
              "result": "88",
              "status": "success",
            },
            "sourcePath": "root/env1/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env1/test:key set/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
      "set": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
              "set",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:set",
        "traces": [
          {
            "data": {
              "message": "Peek (value=0).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1).",
              "result": "0",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=1).",
              "result": "1",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=2).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Inc (amount=10).",
              "result": "2",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=12).",
              "result": "12",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Set (value=88).",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Peek (value=88).",
              "result": "88",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Counter",
            "sourceType": "@winglang/sdk.cloud.Counter",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:set/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;
